--- a/j2py.ipynb
+++ b/j2py.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "id": "6b05bbec-77db-4cf0-8031-fdef31fb328e",
    "metadata": {},
    "outputs": [],
@@ -86,6 +86,8 @@
     "        return s.replace('.ipynb', '.py')\n",
     "    elif '.py' in s:\n",
     "        return s.replace('.py', '.ipynb')\n",
+    "    elif s == 'demo':\n",
+    "        return s\n",
     "    else:\n",
     "        raise BaseException(\n",
     "            f\"{s} not recognized among the possible parameters - py or ipynb\")\n",
@@ -98,19 +100,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "id": "e6f5cc87-3497-4df9-8411-4683e589b73a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "j2py.ipynb -> j2py.py\n",
-      "j2py.py -> j2py_test.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def py2j(dir_input: str, dir_output: str):\n",
     "    print(dir_input, '->', dir_output)\n",
@@ -202,16 +195,22 @@
     "    # TODO use the last parts of the script to build a valid shebang\n",
     "\n",
     "\n",
-    "def demo():\n",
-    "    j2py('j2py.ipynb', 'j2py.py')\n",
-    "    py2j('j2py.py', 'j2py_test.ipynb')\n",
+    "def demo(truename=False):\n",
+    "    if truename:\n",
+    "        j2py('j2py.ipynb', 'j2py.py')\n",
+    "        py2j('j2py.py', 'j2py_demo.ipynb')\n",
+    "    else:\n",
+    "        j2py('j2py.ipynb', 'j2py_demo.py')\n",
+    "        py2j('j2py_demo.py', 'j2py_demo.ipynb')\n",
     "\n",
-    "demo()\n"
+    "\n",
+    "if False:\n",
+    "    demo()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "31fcfef0-5f64-4194-accc-afac0dfbfd17",
    "metadata": {},
    "outputs": [
@@ -219,25 +218,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prompt launch\n"
+      "\n",
+      "______  ___ \n",
+      "| ___ \\|_  |\n",
+      "| |_/ /  | |\n",
+      "|  __/2  | |\n",
+      "| |  /\\__/ /\n",
+      "\\_|  \\____/ \n",
+      "\n",
+      "Py2J conversion utility\n",
+      "Prompt launch\n",
+      "j2py.ipynb -> j2py.py\n",
+      "j2py.py -> j2py_demo.ipynb\n"
      ]
     }
    ],
    "source": [
     "def main():\n",
-    "    if len(sys.argv) == 1 or re.search(r\"ipy\", sys.argv[0]):\n",
+    "    print(TITLE)\n",
+    "    print(\"Py2J conversion utility\")\n",
+    "\n",
+    "    if len(sys.argv) == 1 or re.search(r\"ipy(nb|kernel)\", sys.argv[0]):\n",
     "        print(\"Prompt launch\")\n",
     "        dir_input = input(\n",
     "            \"Please insert the input file name (must be a .py file)\")\n",
     "        dir_output = input(\n",
     "            f\"Please insert the name of the output file ({dir_input} by default)\")\n",
+    "        if dir_output == '':\n",
+    "            dir_output = convert_name(dir_input)\n",
     "    else:\n",
     "        dir_input = sys.argv[1]\n",
     "        if len(sys.argv) >= 2:\n",
     "            dir_output = sys.argv[2]\n",
     "        else:\n",
     "            dir_output = convert_name(dir_input)\n",
+    "\n",
     "    assert dir_input and dir_output, \"Missing input and/or output file names\"\n",
+    "    if dir_input == 'demo':\n",
+    "        demo(True)\n",
+    "\n",
     "    if '.py' in dir_input and '.ipynb' in dir_output:\n",
     "        py2j(dir_input, dir_output)\n",
     "    elif '.ipynb' in dir_input and '.py' in dir_output:\n",
