--- a/j2py.ipynb
+++ b/j2py.ipynb
@@ -2,18 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d0166529",
+   "execution_count": null,
+   "id": "mfwvqi86-z9uc-0sus-j37n-m6jq82cppu35",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## P2J - Python 2 Jupyter utility script\n",
+    null,
+    "#\n",
     "\n",
     "run this script to convert easily and reversably scripts and notebooks, while keeping the formatted cells, comments and outputs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "6b05bbec-77db-4cf0-8031-fdef31fb328e",
+   "execution_count": "1",
+   "id": "v0wwq63r-scfl-z3ih-vnv6-8l9pxl8jiewu",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +30,17 @@
     "from copy import deepcopy\n",
     "from operator import xor\n",
     "from pathlib import Path\n",
-    "\n",
+    "from types import SimpleNamespace\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "id": "7ox192dk-rlo9-8bm4-lzrh-xyfs4keodpyx",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    null,
     "TITLE = r\"\"\"\n",
     "______  ___ \n",
     "| ___ \\|_  |\n",
@@ -37,8 +50,23 @@
     "\\_|  \\____/ \n",
     "\"\"\"\n",
     "\n",
+    "\n",
+    "class reg():\n",
+    "    markdown = r\"(#.*!\\/usr\\/.*)|# coding.*|^$\"\n",
+    "    start = r\"# (#.*)\"\n",
+    "    code_separator = r\"^# In\\[([\\d\\s]*)\\]:?.*\"\n",
+    "\n",
+    "\n",
     "OPTIONS = {\n",
-    "    'keep_outputs': False,\n",
+    "    'j2p': {\n",
+    "        'keep_outputs': False,\n",
+    "        'separate_markdown': True,\n",
+    "    },\n",
+    "    'p2j': {\n",
+    "        'spaces_separators': False,\n",
+    "        'in_separators': True,\n",
+    "        'separate_markdown_double_hashtag': True,\n",
+    "    }\n",
     "}\n",
     "\n",
     "script_cell_template = {\n",
@@ -95,24 +123,59 @@
     "\n",
     "def p(*args, noise=2, **kwargs):\n",
     "    if False:\n",
-    "        print(*args, **kwargs)\n"
+    "        print(*args, **kwargs)\n",
+    "\n",
+    "\n",
+    "if True:",
+    "    import tkinter",
+    "    from tkinter import ttk",
+    "    from tkinter.filedialog import askopenfilename",
+    "    from tkinter.simpledialog import askstring",
+    "\n",
+    "\n",
+    "def windowselect():",
+    "    # Store the path to the selected file",
+    "    tkinter.Tk().withdraw()  # Do not show root window",
+    "    start_folder = Path('.')",
+    "    startfile = askopenfilename(initialdir=start_folder)",
+    "\n",
+    "    if startfile == '':",
+    "        print('You did not select any file.')",
+    "        input('Press enter to close...')",
+    "        # sys.exit()",
+    "    else:",
+    "        print('Source selected: ' + startfile)",
+    "        outputfile = askstring(",
+    "            \"Output file name\",",
+    "            initialvalue=convert_name(startfile))",
+    "        print(outputfile)",
+    "        return (startfile, outputfile)",
+    "\n",
+    "\n",
+    "windowselect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "e6f5cc87-3497-4df9-8411-4683e589b73a",
+   "execution_count": "3",
+   "id": "l9ks83of-ajyd-rtmr-abrt-yc0fz0j8i6do",
    "metadata": {},
    "outputs": [],
    "source": [
     "def py2j(dir_input: str, dir_output: str):\n",
     "    print(dir_input, '->', dir_output)\n",
     "    with open(dir_input) as py:\n",
-    "        rows = py.readlines()\n",
-    "    reg_markdown = r\"# (#.*)\"\n",
-    "    reg_start = r\"(#.*!\\/usr\\/.*)|# coding.*|^$\"\n",
-    "    reg_separator = r\"^# In\\[([\\d\\s]*)\\]:?.*\"\n",
-    "\n",
+    "        rows = py.readlines()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "id": "fdiq9mkm-mi1g-k9wu-vopg-dlyb6hdwgt1x",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    null,
     "    split_cells = []\n",
     "    cur = deepcopy(script_cell_template)  # cur is a single Jupyter cell\n",
     "    cur['id'] = gen_id()\n",
@@ -123,13 +186,13 @@
     "        # if a cell at the beginning contains only comments, transform it into a markdown cell\n",
     "        # ignore all beginning rows containing shebangs (for now, TODO improve using the info for the script itself?)\n",
     "        if start:\n",
-    "            if re.match(reg_start, row):\n",
+    "            if re.match(reg.start, row):\n",
     "                continue\n",
     "            else:\n",
     "                start = False\n",
     "        # check if the rows contain the console separator '# In[int]:', or a markdown title separator '# #something'\n",
-    "        cell_sep = re.match(reg_separator, row)\n",
-    "        mkdn_sep = re.match(reg_markdown, row)\n",
+    "        cell_sep = re.match(reg.code_separator, row)\n",
+    "        mkdn_sep = re.match(reg.markdown, row)\n",
     "        # when a cell separator is hit, split_cells gets updated and a new cell is generated\n",
     "        if cell_sep:\n",
     "            if cur['source']:\n",
@@ -173,9 +236,7 @@
     "def j2py(dir_input: str, dir_output: str):\n",
     "    print(dir_input, '->', dir_output)\n",
     "    with open(dir_input) as nb:\n",
-    "        # print(nb.read())\n",
     "        nb_dict = json.loads(nb.read())\n",
-    "    # use the \"cells\" content to build a valid script sequence\n",
     "    cells: list = nb_dict['cells']\n",
     "    cell_rows = []\n",
     "    # pprint(cells)\n",
@@ -204,46 +265,36 @@
     "        py2j('j2py_demo.py', 'j2py_demo.ipynb')\n",
     "\n",
     "\n",
-    "if False:\n",
-    "    demo()\n"
+    "if True:",
+    "    demo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "31fcfef0-5f64-4194-accc-afac0dfbfd17",
+   "execution_count": "13",
+   "id": "b55fv8b2-u38l-oxzt-7qny-a4yh3dff7h5w",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "______  ___ \n",
-      "| ___ \\|_  |\n",
-      "| |_/ /  | |\n",
-      "|  __/2  | |\n",
-      "| |  /\\__/ /\n",
-      "\\_|  \\____/ \n",
-      "\n",
-      "Py2J conversion utility\n",
-      "Prompt launch\n",
-      "j2py.ipynb -> j2py.py\n",
-      "j2py.py -> j2py_demo.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def main():\n",
     "    print(TITLE)\n",
-    "    print(\"Py2J conversion utility\")\n",
-    "\n",
+    "    print(\"Py2J conversion utility\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "id": "c1wtnuux-55ld-0dy2-0g3b-utpruvjyyomb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    null,
     "    if len(sys.argv) == 1 or re.search(r\"ipy(nb|kernel)\", sys.argv[0]):\n",
     "        print(\"Prompt launch\")\n",
     "        dir_input = input(\n",
     "            \"Please insert the input file name (must be a .py file)\")\n",
     "        dir_output = input(\n",
-    "            f\"Please insert the name of the output file ({dir_input} by default)\")\n",
+    "            f\"Please insert the name of the output file ({convert_name(dir_input)} by default)\")\n",
     "        if dir_output == '':\n",
     "            dir_output = convert_name(dir_input)\n",
     "    else:\n",
@@ -272,7 +323,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -287,11 +338,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.6"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "90293e499dd15dab2096fd03a1b275f32ec33fe8825465e627e97b1ea2fc7c20"
-   }
   }
  },
  "nbformat": 4,
